--- a/app/index.html
+++ b/app/index.html
@@ -2,19 +2,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Rock the JVM Jobs Board</title>
+		<title>Rock the JVM Demo App</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- icon -->
 		<link rel="icon" href="./static/img/icon.png"  type="image/png">
 		<link rel="apple-touch-icon" href="./static/img/icon.png" />
 		<!-- Facebook -->
-		<meta property="og:title" content="Rock the JVM Jobs Board" />
+		<meta property="og:title" content="Rock the JVM Demo App" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://jobs.rockthejvm.com/" />
 		<meta property="og:image" content="./static/img/social-banner.png" />
 		<!-- Twitter -->
-		<meta name="twitter:title" content="Rock the JVM Jobs Board">
-		<meta name="twitter:description" content="A Jobs Board for Scala developers and beyond.">
+		<meta name="twitter:title" content="Rock the JVM Demo App">
+		<meta name="twitter:description" content="A demo app with the Typelevel stack">
 		<meta name="twitter:image" content="./static/img/social-banner.png">
 		<meta name="twitter:card" content="summary_large_image">
 		<!-- =========================================== START : BOOTSTRAP CDN  ============================================== -->
